modify breezing test ui

--- a/BreezingHealth/res/layout/dialog_notice.xml
+++ b/BreezingHealth/res/layout/dialog_notice.xml
@@ -30,8 +30,7 @@
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_toRightOf="@+id/icon"
+                android:layout_height="40dp"
                 android:ellipsize="marquee"
                 android:gravity="left|bottom"
                 android:marqueeRepeatLimit="marquee_forever"
@@ -40,15 +39,22 @@
                 android:paddingRight="10dp"
                 android:textColor="@color/black"
                 android:textSize="17sp"
-                android:visibility="invisible" />
+                android:visibility="visible"
+                android:layout_marginLeft="22dp"
+                android:shadowColor="@color/gray"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="1" />
 
+            
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_alignParentBottom="true"
-                android:background="@color/gray"
+                android:background="@drawable/dialog_divider"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp" />
+            
         </RelativeLayout>
 
         <TextView
