--- a/BreezingHealth/res/layout/list_bluetooth_item.xml
+++ b/BreezingHealth/res/layout/list_bluetooth_item.xml
@@ -10,13 +10,13 @@
 
     <ImageView
         android:id="@+id/detail"
-        android:layout_width="30dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_alignParentRight="true"
         android:adjustViewBounds="true"
         android:contentDescription="@string/content_description"
         android:scaleType="centerInside"
-        android:src="@drawable/arrow_right" />
+        android:src="@drawable/bluetooth_arraw" />
     
     <TextView android:layout_width="match_parent"
         android:layout_height="25dp"
