--- a/BreezingHealth/res/layout/page_of_ready_blow.xml
+++ b/BreezingHealth/res/layout/page_of_ready_blow.xml
@@ -5,19 +5,13 @@
     android:orientation="horizontal"
     android:gravity="center" >
 
-    <ProgressBar
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminateDrawable="@drawable/image_progress" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"
-        android:gravity="center_vertical"
-        android:text="@string/blow_and_inhale"
-        android:textColor="@color/black"
-        android:textSize="@dimen/normal_textsize" />
+        android:contentDescription="@string/content_description"
+        android:src="@drawable/breezing_notice_words"
+        android:scaleType="centerInside"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin" />
 
 </LinearLayout>
